--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "repository": "https://github.com/transistorsoft/background-geolocation-console",
   "betterScripts": {
     "dev": {
-      "command": "concurrently --kill-others \"BABEL_ENV=node node --inspect=9229 ./bin/server.js\" \"BABEL_ENV=webpack node ./bin/dev.js\"",
+      "command": "concurrently --kill-others \"cross-env BABEL_ENV=node node --inspect=9229 ./bin/server.js\" \"cross-env BABEL_ENV=webpack node ./bin/dev.js\"",
       "env": {
         "TZ": "UTC",
         "NODE_PATH": "./src/client/"
@@ -62,10 +62,10 @@
     "@material-ui/styles": "^4.8.2",
     "babel-loader": "^8.0.6",
     "babel-node": "0.0.1-security",
+    "babel-plugin-root-import": "^6.4.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-require-ignore": "0.0.2",
-    "babel-plugin-root-import": "^6.4.1",
     "better-npm-run": "^0.1.1",
     "bluebird": "^3.7.1",
     "body-parser": "^1.17.1",
@@ -73,6 +73,7 @@
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "date-fns": "^2.1.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.6",
     "event-emitter": "^0.3.5",
     "express": "^4.15.2",
@@ -114,8 +115,9 @@
     "babel-jest": "^24.9.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "concurrently": "^5.0.0",
+    "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^7.0.2",
     "css-loader": "^0.26.1",
     "ejs-loader": "^0.3.0",
     "eslint": "^6.8.0",
@@ -146,7 +148,7 @@
     "postcss-modules-values": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
     "react-hot-loader": "^4.6.3",
-    "sqlite3": "~4.0.6",
+    "sqlite3": "^4.0.9",
     "style-loader": "^0.13.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
